# file-compressor

./: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  File Compressor.sln  FileCompressor.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs  PreviewWindow.xaml  PreviewWindow.xaml.cs  README.md
scripts/: Build-Portable.ps1
src/: main.cpp
